--- a/build.gradle
+++ b/build.gradle
@@ -155,6 +155,7 @@ dependencies {
     implementation 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.3'
     implementation 'junit:junit-dep:4.11'
     implementation 'net.fortuna.ical4j:ical4j:1.0-rc3-atlassian-11'
+    implementation 'net.sourceforge.jexcelapi:jxl:2.6.12'
     implementation 'org.apache.ant:ant-junit:1.10.5'
     implementation 'org.apache.axis2:axis2-kernel:1.7.8'
     implementation 'org.apache.commons:commons-collections4:4.2'
@@ -179,6 +180,7 @@ dependencies {
     implementation 'org.codehaus.groovy:groovy-all:2.4.16' // Remember to change the version number in javadoc.options block
     implementation 'org.freemarker:freemarker:2.3.28' // Remember to change the version number in FreeMarkerWorker class when upgrading
     implementation 'org.hamcrest:hamcrest-all:1.3'
+    implementation 'org.javolution:javolution-core-java:6.0.0'
     implementation 'org.owasp.esapi:esapi:2.1.0.1'
     implementation 'org.springframework:spring-test:5.1.2.RELEASE'
     implementation 'org.zapodot:jackson-databind-java-optional:2.6.1'
